--- a/haskell-crash-cource.cabal
+++ b/haskell-crash-cource.cabal
@@ -25,13 +25,27 @@ executable haskell-crash-cource
 
     -- Modules included in this executable, other than Main.
     other-modules:
-        AbstractDataTypes
-        BasicFunctions
-        BasicTypes
-        Recursives
+        AbstractDataType
+        BasicType
+        BasicFunction
+        Recursive
+        HigherOrderFunction
+        IO
+        TypeClass
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.14.1.0
     hs-source-dirs:   src
     default-language: Haskell2010
+
+test-suite crash-course-test
+  type: exitcode-stdio-1.0
+  main-is: Sepc.hs
+  other-modules:
+    AbstractDataTypesSpec
+  hs-source-dirs:
+    test
+  build-depends:    base ^>=4.14.1.0
+  build-tool-depends: hspec-discover:hspec-discover
+  default-language: Haskell2010
