--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,11 @@ defaults:
     shell: bash
 
 on:
-  release:
-    types: [created]
-
+  push:
+    branches:
+      - '*'
+    tags:
+      - '*'
 jobs:
 
   build:
