--- a/haskell-crash-cource.cabal
+++ b/haskell-crash-cource.cabal
@@ -1,5 +1,5 @@
 cabal-version:      2.4
-name:               haskell-crash-cource
+name:               haskell-crash-course
 version:            0.1.0.0
 
 -- A short (one-line) description of the package.
@@ -20,11 +20,11 @@ maintainer:         ywataywatay@gmail.com
 -- category:
 extra-source-files: CHANGELOG.md
 
-executable haskell-crash-cource
-    main-is:          Main.lhs
-
+library
     -- Modules included in this executable, other than Main.
     other-modules:
+        Paths_haskell_crash_course
+    exposed-modules:
         AbstractDataType
         BasicType
         BasicFunction
@@ -39,13 +39,33 @@ executable haskell-crash-cource
     hs-source-dirs:   src
     default-language: Haskell2010
 
-test-suite crash-course-test
-  type: exitcode-stdio-1.0
-  main-is: Sepc.hs
+executable haskell-crash-course
+  main-is : Main.lhs
   other-modules:
-    AbstractDataTypesSpec
+    Paths_haskell_crash_course
+    AbstractDataType
+    BasicType
+    BasicFunction
+    Recursive
+    HigherOrderFunction
+    IO
+    TypeClass
+
+  build-depends:    base ^>=4.14.1.0
+  hs-source-dirs: src
+  default-language: Haskell2010
+
+test-suite haskell-crash-course-test
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  other-modules:
+    Paths_haskell_crash_course
+    RecursiveSpec
   hs-source-dirs:
     test
-  build-depends:    base ^>=4.14.1.0
+  build-depends:
+      haskell-crash-course
+      , base ^>=4.14.1.0
+      , hspec >= 2.7.0
   build-tool-depends: hspec-discover:hspec-discover
   default-language: Haskell2010
