--- a/haskell-crash-course.cabal
+++ b/haskell-crash-course.cabal
@@ -35,7 +35,7 @@ library
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.1.0
+    build-depends:    base ^>=4.14.1.0, text >= 1.2.4.1
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -51,7 +51,7 @@ executable haskell-crash-course
     IO
     TypeClass
 
-  build-depends:    base ^>=4.14.1.0
+  build-depends:    base ^>=4.14.1.0, text >= 1.2.4.1
   hs-source-dirs: src
   default-language: Haskell2010
 
