Classify errors produced by GHC.

--- a/error/compile-error.cabal
+++ b/error/compile-error.cabal
@@ -24,15 +24,15 @@ library error
 
     -- Modules included in this executable, other than Main.
     other-modules:
-        CouldNotMatchExpected
-      , Hole
-      , NoInstanceFor
-      , NotInScope
-      , VariableNotInScope
-
+        CouldNotMatchExpectedType,
+        Hole,
+        NoInstanceFor,
+        NotInScope,
+        VariableNotInScope,
+        Dummy
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.14.1.0
-    hs-source-dirs:  . 
+  hs-source-dirs:  . 
     default-language: Haskell2010
