--- a/error/compile-error.cabal
+++ b/error/compile-error.cabal
@@ -24,6 +24,7 @@ library error
 
     -- Modules included in this executable, other than Main.
     other-modules:
+        CannotMakeADeriviedInstanceOf,
         CouldNotMatchExpectedType,
         Hole,
         NoInstanceFor,
