--- a/haskell-crash-course.cabal
+++ b/haskell-crash-course.cabal
@@ -32,8 +32,9 @@ library
         HigherOrderFunction
         IO
         TypeClass
+        
         Parser
-
+        Free
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.14.1.0, text >= 1.2.4.1
@@ -52,6 +53,7 @@ executable haskell-crash-course
     IO
     TypeClass
     Parser
+    Free
 
   build-depends:    base ^>=4.14.1.0, text >= 1.2.4.1
   hs-source-dirs: src
